WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
18360
"missing sentinel" warnings in PluginDatabaseGtk.cpp
https://bugs.webkit.org/show_bug.cgi?id=18360
Summary
"missing sentinel" warnings in PluginDatabaseGtk.cpp
Christian Persch (GNOME) (away; not reading bugmail)
Reported
2008-04-08 05:05:31 PDT
../WebCore/plugins/gtk/PluginDatabaseGtk.cpp:51: warning: missing sentinel in function call [etc.] This stems from
http://bugs.webkit.org/show_bug.cgi?id=17825#c2
. Since g_build_filename is a varargs call, the sentinel should be NULL, not 0.
Attachments
patch
(3.26 KB, patch)
2008-04-08 05:16 PDT
,
Christian Persch (GNOME) (away; not reading bugmail)
alp
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christian Persch (GNOME) (away; not reading bugmail)
Comment 1
2008-04-08 05:16:54 PDT
Created
attachment 20403
[details]
patch
Alp Toker
Comment 2
2008-04-08 20:22:22 PDT
Comment on
attachment 20403
[details]
patch r=me Needs some massaging to apply to TOT.
Alp Toker
Comment 3
2008-04-08 20:23:03 PDT
Landed in
r31747
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug