2008-04-08  Christian Persch  <chpe@gnome.org>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18360
        "missing sentinel" warnings in PluginDatabaseGtk.cpp

        Use NULL, not 0 as sentinel in varargs calls.

        * plugins/gtk/PluginDatabaseGtk.cpp:
        (WebCore::PluginDatabase::getPluginPathsInDirectories):
        (WebCore::PluginDatabase::defaultPluginDirectories):


Canonical link: https://commits.webkit.org/25304@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31747 268f45cc-cd09-0410-ab3c-d52691b4dbfc